relay-pii/src/snapshots/relay_pii__processor__tests__anything_hash_on_container.snap
---
source: relay-pii/src/processor.rs
expression: event
---
{
  "extra": null,
  "_meta": {
    "extra": {
      "": {
        "rem": [
          [
            "@anything:hash",
            "x"
          ]
        ]
      }
    }
  }
}
