relay-pii/src/snapshots/relay_pii__processor__tests__does_not_scrub_if_no_graphql.snap
---
source: relay-pii/src/processor.rs
expression: "&data"
---
Event {
    id: ~,
    level: ~,
    version: ~,
    ty: ~,
    fingerprint: ~,
    culprit: ~,
    transaction: ~,
    transaction_info: ~,
    time_spent: ~,
    logentry: ~,
    logger: ~,
    modules: ~,
    platform: ~,
    timestamp: ~,
    start_timestamp: ~,
    received: ~,
    server_name: ~,
    release: ~,
    dist: ~,
    environment: ~,
    site: ~,
    user: ~,
    request: Request {
        url: ~,
        method: ~,
        protocol: ~,
        data: Object(
            {
                "query": String(
                    "{\n  viewer {\n    login\n  }\n}",
                ),
                "variables": Object(
                    {
                        "login": String(
                            "foo",
                        ),
                    },
                ),
            },
        ),
        query_string: ~,
        fragment: ~,
        cookies: ~,
        headers: ~,
        body_size: ~,
        env: ~,
        inferred_content_type: ~,
        api_target: ~,
        other: {},
    },
    contexts: Contexts(
        {
            "response": ContextInner(
                Response(
                    ResponseContext {
                        cookies: ~,
                        headers: ~,
                        status_code: ~,
                        body_size: ~,
                        data: Object(
                            {
                                "data": Object(
                                    {
                                        "viewer": Object(
                                            {
                                                "login": String(
                                                    "foo",
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                        inferred_content_type: ~,
                        other: {},
                    },
                ),
            ),
        },
    ),
    breadcrumbs: ~,
    exceptions: ~,
    stacktrace: ~,
    template: ~,
    threads: ~,
    tags: ~,
    extra: ~,
    debug_meta: ~,
    client_sdk: ~,
    ingest_path: ~,
    errors: ~,
    key_id: ~,
    project: ~,
    grouping_config: ~,
    checksum: ~,
    csp: ~,
    spans: ~,
    measurements: ~,
    breakdowns: ~,
    scraping_attempts: ~,
    _metrics: ~,
    _dsc: ~,
    performance_issues_spans: ~,
    other: {},
}
