relay-pii/src/snapshots/relay_pii__processor__tests__logentry_formatted_bearer_token_scrubbing.snap
---
source: relay-pii/src/processor.rs
expression: event
---
{
  "logentry": {
    "formatted": "API request failed with Bearer [token] and other data"
  },
  "_meta": {
    "logentry": {
      "formatted": {
        "": {
          "rem": [
            [
              "@bearer",
              "s",
              24,
              38
            ]
          ],
          "len": 63
        }
      }
    }
  }
}
