relay-pii/src/snapshots/relay_pii__processor__tests__logentry_formatted_never_fully_filtered.snap
---
source: relay-pii/src/processor.rs
expression: event
---
{
  "logentry": {
    "formatted": "User [email] failed login with card [creditcard]"
  },
  "_meta": {
    "logentry": {
      "formatted": {
        "": {
          "rem": [
            [
              "@email:replace",
              "s",
              5,
              12
            ],
            [
              "@creditcard:replace",
              "s",
              36,
              48
            ]
          ],
          "len": 68
        }
      }
    }
  }
}
