relay-pii/src/snapshots/relay_pii__processor__tests__logentry_formatted_password_word_not_scrubbed.snap
---
source: relay-pii/src/processor.rs
expression: event
---
{
  "logentry": {
    "formatted": "User password is secret123 for authentication"
  }
}
