relay-pii/src/snapshots/relay_pii__processor__tests__no_field_upsert.snap
---
source: relay-pii/src/processor.rs
expression: event
---
{
  "extra": null,
  "_meta": {
    "extra": {
      "": {
        "rem": [
          [
            "@anything:remove",
            "x"
          ]
        ]
      }
    }
  }
}
