relay-pii/src/snapshots/relay_pii__processor__tests__quoted_keys.snap
---
source: relay-pii/src/processor.rs
expression: event
---
{
  "extra": {
    "do not ,./<>?!@#$%^&*())'ßtrip'": "foo",
    "special ,./<>?!@#$%^&*())'gärbage'": null
  },
  "_meta": {
    "extra": {
      "special ,./<>?!@#$%^&*())'gärbage'": {
        "": {
          "rem": [
            [
              "@anything:remove",
              "x"
            ]
          ]
        }
      }
    }
  }
}
